---------------------------------------------------------------------------------------------------
Version: 1.3.0
Date: ????
  Changes:
    - Connecing regular pipes directly to ducts is now entirely impossible, and the setting has been removed
    - Improved circuit connector positioning
    - Placing regular or long duct ghosts will no longer replace them with small ducts - bots will place the larger ducts directly
    - Removed base area and health multiplier options
    - Rewrote duct auto-join logic to improve performance and reliability
    - Significantly increased duct throughput - transfer rate can now reach 72,000 fluid/sec
  Bugfixes:
    - Fixed that ducts placed out of line with intakes and outtakes would still connect
---------------------------------------------------------------------------------------------------
Version: 1.2.16
Date: 2020-12-25
  Features:
    - Added compatibility to Industrial Revolution 2
---------------------------------------------------------------------------------------------------
Version: 1.2.15
Date: 2020-12-19
  Bugfixes:
    - Fixed that rotating ghost ducts in jumps of two will make some of them change direction.
    - Fixed possible non recoverable error/crash with auto-join.
---------------------------------------------------------------------------------------------------
Version: 1.2.14
Date: 2020-12-19
  Changes:
    - Reduced duct fluid sound volume.
  Bugfixes:
    - Fixed that underground duct distance was shortened by 2.
---------------------------------------------------------------------------------------------------
Version: 1.2.13
Date: 2020-12-18
  Bugfixes:
    - Fixed crash with squeak through mod in the version 1.2.12.
---------------------------------------------------------------------------------------------------
Version: 1.2.12
Date: 2020-12-18
  Bugfixes:
    - Fixed all problems related to rotating an end point (thanks to MFilippo).