@@ -1,3 +1,31 @@
+local connector_def = circuit_connector_definitions.create(universal_connector_template, {
+  { variation = 0, main_offset = util.by_pixel(5, -18), shadow_offset = util.by_pixel(2, 0), draw_shadow = true },
+  { variation = 0, main_offset = util.by_pixel(5, -14), shadow_offset = util.by_pixel(2, 0), draw_shadow = true },
+  { variation = 0, main_offset = util.by_pixel(5, -18), shadow_offset = util.by_pixel(2, 0), draw_shadow = true },
+  { variation = 0, main_offset = util.by_pixel(5, -14), shadow_offset = util.by_pixel(2, 0), draw_shadow = true },
+})
+
+local curve_connector_def = circuit_connector_definitions.create(universal_connector_template, {
+  { variation = 0, main_offset = util.by_pixel(5, -32), shadow_offset = util.by_pixel(2, 0), draw_shadow = true },
+  { variation = 0, main_offset = util.by_pixel(5, -32), shadow_offset = util.by_pixel(2, 0), draw_shadow = true },
+  { variation = 0, main_offset = util.by_pixel(5, 2), shadow_offset = util.by_pixel(2, 0), draw_shadow = true },
+  { variation = 0, main_offset = util.by_pixel(5, 2), shadow_offset = util.by_pixel(2, 0), draw_shadow = true },
+})
+
+local t_connector_def = circuit_connector_definitions.create(universal_connector_template, {
+  { variation = 0, main_offset = util.by_pixel(5, -18), shadow_offset = util.by_pixel(2, 0), draw_shadow = true },
+  { variation = 0, main_offset = util.by_pixel(5, -14), shadow_offset = util.by_pixel(2, 0), draw_shadow = true },
+  { variation = 0, main_offset = util.by_pixel(5, -10), shadow_offset = util.by_pixel(2, 0), draw_shadow = true },
+  { variation = 0, main_offset = util.by_pixel(5, -14), shadow_offset = util.by_pixel(2, 0), draw_shadow = true },
+})
+
+local cross_connector_def = circuit_connector_definitions.create(universal_connector_template, {
+  { variation = 0, main_offset = util.by_pixel(5, -14), shadow_offset = util.by_pixel(2, 0), draw_shadow = true },
+  { variation = 0, main_offset = util.by_pixel(5, -14), shadow_offset = util.by_pixel(2, 0), draw_shadow = true },
+  { variation = 0, main_offset = util.by_pixel(5, -14), shadow_offset = util.by_pixel(2, 0), draw_shadow = true },
+  { variation = 0, main_offset = util.by_pixel(5, -14), shadow_offset = util.by_pixel(2, 0), draw_shadow = true },
+})
+
 data:extend({
   {
     type = "storage-tank",
@@ -191,6 +219,9 @@ data:extend({
       max_sounds_per_type = 3,
     },
     vehicle_impact_sound = { filename = "__base__/sound/car-metal-impact.ogg", volume = 0.65 },
+    circuit_wire_connection_points = connector_def.points,
+    circuit_connector_sprites = connector_def.sprites,
+    circuit_wire_max_distance = default_circuit_wire_max_distance,
   },
   {
     type = "storage-tank",
@@ -368,6 +399,9 @@ data:extend({
       max_sounds_per_type = 3,
     },
     vehicle_impact_sound = { filename = "__base__/sound/car-metal-impact.ogg", volume = 0.65 },
+    circuit_wire_connection_points = connector_def.points,
+    circuit_connector_sprites = connector_def.sprites,
+    circuit_wire_max_distance = default_circuit_wire_max_distance,
   },
   {
     type = "storage-tank",
@@ -545,6 +579,9 @@ data:extend({
       max_sounds_per_type = 3,
     },
     vehicle_impact_sound = { filename = "__base__/sound/car-metal-impact.ogg", volume = 0.65 },
+    circuit_wire_connection_points = connector_def.points,
+    circuit_connector_sprites = connector_def.sprites,
+    circuit_wire_max_distance = default_circuit_wire_max_distance,
   },
   {
     type = "storage-tank",
@@ -723,6 +760,9 @@ data:extend({
       max_sounds_per_type = 3,
     },
     vehicle_impact_sound = { filename = "__base__/sound/car-metal-impact.ogg", volume = 0.65 },
+    circuit_wire_connection_points = t_connector_def.points,
+    circuit_connector_sprites = t_connector_def.sprites,
+    circuit_wire_max_distance = default_circuit_wire_max_distance,
   },
   {
     type = "storage-tank",
@@ -900,6 +940,9 @@ data:extend({
       max_sounds_per_type = 3,
     },
     vehicle_impact_sound = { filename = "__base__/sound/car-metal-impact.ogg", volume = 0.65 },
+    circuit_wire_connection_points = curve_connector_def.points,
+    circuit_connector_sprites = curve_connector_def.sprites,
+    circuit_wire_max_distance = default_circuit_wire_max_distance,
   },
   {
     type = "storage-tank",
@@ -1079,8 +1122,10 @@ data:extend({
       max_sounds_per_type = 3,
     },
     vehicle_impact_sound = { filename = "__base__/sound/car-metal-impact.ogg", volume = 0.65 },
+    circuit_wire_connection_points = cross_connector_def.points,
+    circuit_connector_sprites = cross_connector_def.sprites,
+    circuit_wire_max_distance = default_circuit_wire_max_distance,
   },
-
   {
     type = "pipe-to-ground",
     name = "duct-underground",
